--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,7 @@
                 border: 1px solid black;
                 background-color: #fff;
                 width: 78px;
+                float: right;
 
                 &:hover {
                     transition: 0.2s;
